--- a/static/utils.css
+++ b/static/utils.css
@@ -27,11 +27,12 @@
     font-size:15px;
     font-weight:bold;
     font-style:normal;
-    height:47px;
     line-height:47px;
-    width:113px;
     text-decoration:none;
     text-align:center;
     text-shadow:1px 1px 0px #1570cd;
     cursor:pointer;
+    height:47px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
